gap fix

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -172,7 +172,6 @@ $maxWidthContainer: 0;
             display: flex;
             flex-direction: column;
             align-items: center;
-            row-gap: 20px;
             position: absolute;
 
             & li {
@@ -452,7 +451,6 @@ $maxWidthContainer: 0;
 
             @media (max-width: 767px) {
                 flex-direction: column;
-                row-gap: 10px;
             }
         }
     }
@@ -545,12 +543,13 @@ $maxWidthContainer: 0;
         
         @media (max-width: 767px) {
             position: static;
-            column-gap: 10px;
         }
     }
 
     &__link img {
         @include adaptive-value("width", 35, 15, 3);
-        margin-left: 10px;
+        @media (max-width: 767px) {
+            margin-left: 10px;
+        }
     }
 }
